@@ -14,6 +14,7 @@ micro=Micro
 water=Water
 conductivity=Conductivity
 showSugarAtoms=Show sugar atoms
+showWaterCharges=Show water charges
 showSugarIn3D=Show sugar in 3D
 sodiumChlorideNewLine=Sodium<br>Chloride
 calciumChlorideNewLine=Calcium<br>Chloride
